# fourex

./: .gitignore  MCP.md  Makefile  README.md  THINKING_TOKENS.md  docker-compose.yml  pyproject.toml  test_websocket.py
agents/: .env.example  Makefile  README.md  __init__.py  example_config.json  run_agents.py  run_fastmcp_server.py  run_mcp_server.py  test_agents.py  test_mcp_distances.py  test_modal.py
agents/deploy/: modal_ollama.py
agents/src/: agent.py  enhanced_logging.py  fastmcp_client.py  fastmcp_server.py  llm_providers.py  orchestrator.py  persistent_game_client.py  personalities.py
backend/: .env.example  PERSISTENCE.md  __init__.py  alembic.ini  manage_db.py
backend/migrations/: env.py
backend/migrations/versions/: __init__.py
backend/src/: config.py  main.py
backend/src/api/: __init__.py  game_controller.py  persistent_game_controller.py  rest.py  websocket.py
backend/src/database/: __init__.py  connection.py  init_db.py  models.py  repository.py
backend/src/game/: __init__.py  __main__.py  models.py  rules.py
backend/tests/: __init__.py  test_api.py  test_models.py  test_rules.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: create-game-dialog.tsx  diff-legend.tsx  event-log.tsx  game-toolbar.tsx  json-viewer.tsx  log-viewer.tsx  map-canvas.tsx  player-list.tsx  prompt-accordion.tsx  turn-timeline.tsx
frontend/src/lib/: api.ts  utils.ts
tests/: __init__.py  test_turn_progression.py
(+10 files in other folders)
